# dev-interview-platform

./: AGENT.md  Dockerfile  MOCK_USERS.md  README.md  docker-compose.yml  nginx.conf  openapi.yaml  package-lock.json  package.json  render.yaml  start.sh
.github/workflows/: ci-cd.yml
client/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
client/src/: App.tsx  index.css
client/src/__tests__/: App.test.tsx  InterviewRoom.test.tsx  useSocket.test.ts
client/src/components/: Whiteboard.tsx
client/src/components/ui/: badge.tsx  button.tsx  card.tsx
client/src/hooks/: useAuth.ts  useSocket.ts
client/src/pages/: Dashboard.tsx  InterviewRoom.tsx  Landing.tsx
client/src/services/: api.ts  codeExecution.ts
client/src/test/: setup.ts
server/: generate_test_data.py  pyproject.toml  test.db  test_sync_40911.db  test_sync_44087.db  verify_api.py
server/app/: database.py  main.py  models.py
server/tests/: conftest.py  test_auth.py  test_execution.py  test_health.py  test_sessions.py  test_socket.py  test_sync_scenarios.py  test_time_sync.py  test_whiteboard_persistence.py
server/tests_integration/: conftest.py  test_session_flow.py
